# maplab

./: .gitmodules
algorithms/ceres-error-terms/: CMakeLists.txt
algorithms/ceres-error-terms/src/: point_pair_under_transformation_error-term.cc
algorithms/map-anchoring/: CMakeLists.txt  package.xml
algorithms/map-anchoring/src/: detect_landmark_pairs.cc  reanchor_with_landmark_pairs.cc
algorithms/map-optimization/src/: optimization-terms-addition.cc
applications/maplab-console/scripts/: run_maplab_batch.sh
applications/mininav2d/: CMakeLists.txt  package.xml
applications/mininav2d/app/: mininav2d-fastlio-loc-ros.cc  mininav2d-ros.cc
applications/mininav2d/env-hooks/: 12.mininav2d-config-template.sh.em
applications/mininav2d/include/mininav2d/: flow-topics.h  mininav2d-flow.h  mininav2d-msg.h  mininav2d_tf_flags.i
applications/mininav2d/msg/: RosNav2dFullPath.msg
applications/mininav2d/scripts/: run_mini_nav2d_ros  run_mininav2d_fastlio_loc_ros  run_mininav2d_ros
applications/mininav2d/scripts/nav_request/: addTargetPoint  navigateToObject  startPathRecording
applications/mininav2d/share/: hear_slam_root_cfg.yaml
applications/mininav2d/src/: mininav2d-flow.cc
applications/openvinsli/: CMakeLists.txt  README.md  package.xml
applications/openvinsli/app/: openvinsli-app.cc
applications/openvinsli/env-hooks/: 10.openvins-config-template.sh.em
applications/openvinsli/include/openvinsli/: data-publisher-flow.h  datasource-factory.h  datasource-flow.h  datasource-hearslam.h  datasource-rosbag.h  datasource.h  feature-tracking-flow.h  feature-tracking.h  flow-topics.h  imu-camera-synchronizer-flow.h  imu-camera-synchronizer.h  localizer-flow.h  map-builder-flow.h  mini-nav2d-flow.h  mini-nav2d-msg.h  openvins-estimate.h  openvins-factory.h  openvins-flow.h  openvins-health-monitor.h  openvins-localization-handler.h  openvins-maplab-timetranslation.h  openvinsli-node.h  vi-map-with-mutex.h  viewer.h  vio-update-builder.h
applications/openvinsli/include/rovioli/: datasource-factory.h  datasource-rostopic.h  flow-topics.h  imu-camera-synchronizer-flow.h  localizer-helpers.h  localizer.h  openvins-factory.h  openvins-localization-handler.h  openvins-maplab-timetranslation.h  openvinsli-node.h  ros-helpers.h
applications/openvinsli/launch/: openvinsli.launch  openvinsli_rgbdi.launch  openvinsli_tango_coconut.launch  openvinsli_template.launch
applications/openvinsli/msg/: RosNav2dCmd.msg  RosNav2dFullPath.msg  RosNav2dPathPlan.msg
applications/openvinsli/scripts/: run_openvinsli  run_openvinsli_live
applications/openvinsli/scripts/nav_request/: addTargetPoint  echo_nav_cmd  finishPathRecording  navigateTo  navigateToObject  navigateToWaypoint  stopNav
applications/openvinsli/scripts/tutorials/: tutorial_euroc  tutorial_euroc_live  tutorial_euroc_localization  tutorial_hearslam  tutorial_hearslam_localization  tutorial_rgbd_hearslam  tutorial_rgbd_hearslam_localization
applications/openvinsli/share/: euroc-mono.yaml  euroc-stereo.yaml  hear_slam_root_cfg.yaml  hearslam-mono-rgb.yaml  hearslam-stereo.yaml  local-grasp-points.yaml  ncamera-hearslam.yaml  openvins_default_config.info  openvins_default_estimator_config.yaml  openvins_default_kalibr_imu_chain.yaml  openvins_rgbd_estimator_config.yaml  openvins_rgbd_kalibr_imu_chain.yaml  openvins_stereo_estimator_config.yaml  openvinsli-rosparams.yaml
applications/openvinsli/src/: data-publisher-flow.cc  datasource-factory.cc  datasource-hearslam.cc  datasource-rosbag.cc  datasource-rostopic.cc  datasource.cc  feature-tracking.cc  imu-camera-synchronizer.cc  localizer-flow.cc  localizer-helpers.cc  localizer.cc  map-builder-flow.cc  mini-nav2d-flow.cc  openvins-factory.cc  openvins-flow.cc  openvins-localization-handler.cc  openvinsli-node.cc  ros-helpers.cc  viewer.cpp  vio-update-builder.cc
applications/openvinsli/srv/: RosNavRequest.srv
applications/openvinsli/test/: test-feature-tracking.cc  test-ros-helpers.cc  test-vio-update-builder.cc
applications/rovioli/: CMakeLists.txt  package.xml
applications/rovioli/app/: rovioli-app.cc
applications/rovioli/scripts/: run_rovioli_hearslam
applications/rovioli/share/: hearslam-stereo.yaml  imu-hearslam.yaml
applications/rovioli/src/: datasource-factory.cc  datasource-hearslam.cc  vio-update-builder.cc
applications/various_test/incremental_map/: .gitignore  CMakeLists.txt  merge_map.cc  package.xml
applications/various_test/incremental_map/include/incremental_map/: incremental_pipeline.h  landmark_sparsification.h
applications/various_test/incremental_map/src/: incremental_pipeline.cc  landmark_sparsification.cc
applications/various_test/maintain_waypoints/: CMakeLists.txt  package.xml  visualize_waypt.cc
applications/various_test/maintain_waypoints/include/maintain_waypoints/: waypoints_remap.h  waypoints_utils.h  waypoints_visualizer.h
applications/various_test/maintain_waypoints/src/: waypoints_remap.cc  waypoints_utils.cc  waypoints_visualizer.cc
aslam_cv2/aslam_cv_common/src/: thread-pool.cc
common/vio-common/src/: imu-measurements-buffer.cc
console-plugins/loop-closure-plugin/src/: loop-closure-plugin.cc  vi-map-merger.cc
console-plugins/map-anchoring-plugin/: CMakeLists.txt
console-plugins/map-anchoring-plugin/src/: align-landmarks-between-maps.cc  anchoring-plugin.cc
console-plugins/vi-map-summarization-plugin/src/: summarization-plugin.cc
packed_cmakelists/: .gitignore  README.md  deletelinks.sh  list_modules.py  makelinks.sh
packed_cmakelists/console-plugins/: CMakeLists.txt
packed_cmakelists/maplab_core/: CMakeLists.txt
packed_cmakelists/maplab_core/algorithms/: CMakeLists.txt
packed_cmakelists/maplab_core/aslam_cv2/: CMakeLists.txt
packed_cmakelists/maplab_core/backend/: CMakeLists.txt
packed_cmakelists/maplab_core/common/: CMakeLists.txt
packed_cmakelists/maplab_core/map-structure/: CMakeLists.txt
test/merge-map/: merge_maps  merge_maps.py  update_map
test/vi-mapping-test-app/: CMakeLists.txt
visualization/src/: rviz-visualization-sink.cc
(+22 files in other folders)
