<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>mininav2d</name>
  <version>2.2.0</version>
  <description>
    Open-VINS with Localization Integrated (OpenVINS-LI): Integration of Open-VINS into
    Maplab to extend it with localization and mapping capabilities.
  </description>
  <maintainer email="jeffrey@newthinker.net">Jeffrey Wang</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- catkin_simple: https://github.com/catkin/catkin_simple
                 The automatic discovery and building of messages/services is only done
                 if your package build_depend's on message_generation, and message generation
                 will complain if your package does not run_depend on message_runtime. -->
  <build_depend>message_generation</build_depend>
  <!-- <run_depend>message_runtime</run_depend> -->
  
  <depend>hear_slam</depend>
  <depend>xbot_common_interfaces</depend>

  <depend>eigen_conversions</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>

  <depend>gflags</depend>
  <depend>glog</depend>

  <!-- <depend>gflags_catkin</depend> -->
  <!-- <depend>glog_catkin</depend> -->
  <depend>message_flow</depend>
</package>
