<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>openvinsli</name>
  <version>2.2.0</version>
  <description>
    Open-VINS with Localization Integrated (OpenVINS-LI): Integration of Open-VINS into
    Maplab to extend it with localization and mapping capabilities.
  </description>
  <maintainer email="jeffrey@newthinker.net">Jeffrey Wang</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- catkin_simple: https://github.com/catkin/catkin_simple
                 The automatic discovery and building of messages/services is only done
                 if your package build_depend's on message_generation, and message generation
                 will complain if your package does not run_depend on message_runtime. -->
  <build_depend>message_generation</build_depend>
  <!-- <run_depend>message_runtime</run_depend> -->
  

  <depend>aslam_cv_cameras</depend>
  <depend>aslam_cv_common</depend>
  <depend>aslam_cv_frames</depend>
  <depend>aslam_cv_pipeline</depend>
  <depend>cv_bridge</depend>
  <depend>feature_tracking</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>localization_summary_map</depend>
  <depend>loop_closure_handler</depend>
  <depend>maplab_common</depend>
  <depend>maplab_ros_common</depend>
  <depend>maplab_msgs</depend>
  <depend>mapping_workflows_plugin</depend>
  <depend>message_flow</depend>
  <depend>online_map_builders</depend>
  <depend>ov_msckf</depend>
  <depend>kindr</depend>
  <depend>sensors</depend>
  <depend>vi_map</depend>
  <depend>vi_mapping_test_app</depend>
  <depend>vio_common</depend>
  <depend>visualization</depend>
</package>
