<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>incremental_map</name>
  <version>0.0.0</version>
  <description>
    update the localization map incrementally
  </description>
  <maintainer email="zhiwei.wang@ninebot.com">maplab-developers</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>aslam_cv_common</depend>
  <depend>aslam_cv_pipeline</depend>
  <depend>ceres_error_terms</depend>
  <depend>ceres_catkin</depend>
  <depend>eigen_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>landmark_triangulation</depend>
  <depend>localization_summary_map</depend>
  <depend>loop_closure_handler</depend>
  <depend>map_anchoring</depend>
  <depend>map_optimization</depend>
  <depend>map_sparsification</depend>
  <depend>maplab_common</depend>
  <depend>opencv3_catkin</depend>
  <depend>sensors</depend>
  <depend>vi_map</depend>
  <depend>visualization</depend>
</package>
