cmake_minimum_required (VERSION 3.1)
project (algorithms)

#cmake_policy(SET CMP0002 NEW)
set_property(GLOBAL PROPERTY ALLOW_DUPLICATE_CUSTOM_TARGETS 1)

set(PROJECT_SOURCE_DIR ./code)
message("PROJECT_SOURCE_DIR: ${PROJECT_SOURCE_DIR}")

add_subdirectory (${PROJECT_SOURCE_DIR}/ceres-error-terms ceres-error-terms)
add_subdirectory (${PROJECT_SOURCE_DIR}/dense-reconstruction/stereo-dense-reconstruction dense-reconstruction/stereo-dense-reconstruction)
add_subdirectory (${PROJECT_SOURCE_DIR}/feature-tracking feature-tracking)
add_subdirectory (${PROJECT_SOURCE_DIR}/geometric-vision-algorithms geometric-vision-algorithms)
add_subdirectory (${PROJECT_SOURCE_DIR}/imu-integrator-rk4 imu-integrator-rk4)
add_subdirectory (${PROJECT_SOURCE_DIR}/landmark-triangulation landmark-triangulation)
add_subdirectory (${PROJECT_SOURCE_DIR}/localization-evaluator localization-evaluator)
add_subdirectory (${PROJECT_SOURCE_DIR}/loopclosure/descriptor-projection loopclosure/descriptor-projection)
add_subdirectory (${PROJECT_SOURCE_DIR}/loopclosure/inverted-multi-index loopclosure/inverted-multi-index)
add_subdirectory (${PROJECT_SOURCE_DIR}/loopclosure/loop-closure-handler loopclosure/loop-closure-handler)
add_subdirectory (${PROJECT_SOURCE_DIR}/loopclosure/loopclosure-common loopclosure/loopclosure-common)
add_subdirectory (${PROJECT_SOURCE_DIR}/loopclosure/matching-based-loopclosure loopclosure/matching-based-loopclosure)
add_subdirectory (${PROJECT_SOURCE_DIR}/loopclosure/product-quantization loopclosure/product-quantization)
add_subdirectory (${PROJECT_SOURCE_DIR}/loopclosure/vocabulary-tree loopclosure/vocabulary-tree)
add_subdirectory (${PROJECT_SOURCE_DIR}/map-anchoring map-anchoring)
add_subdirectory (${PROJECT_SOURCE_DIR}/map-optimization map-optimization)
add_subdirectory (${PROJECT_SOURCE_DIR}/map-optimization-legacy map-optimization-legacy)
add_subdirectory (${PROJECT_SOURCE_DIR}/map-sparsification map-sparsification)
add_subdirectory (${PROJECT_SOURCE_DIR}/online_map_builders online_map_builders)
add_subdirectory (${PROJECT_SOURCE_DIR}/simulation simulation)
add_subdirectory (${PROJECT_SOURCE_DIR}/vi-map-helpers vi-map-helpers)

